--- a/app.ipynb
+++ b/app.ipynb
@@ -1,6 +1,43 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 170,
+   "id": "1f9e8cfe-8af7-404c-bed7-fb40350172ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import gspread\n",
+    "from google.oauth2.service_account import Credentials"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "id": "bb341bdf-4368-4a1e-8ce6-f7e300e0f46c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scopes = [\n",
+    "    \"https://www.googleapis.com/auth/spreadsheets\"\n",
+    "]\n",
+    "\n",
+    "creds = Credentials.from_service_account_file(\"credentials.json\", scopes=scopes)\n",
+    "client = gspread.authorize(creds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "id": "e32992b6-82ff-48ca-bb39-72e99102469b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sheet_id = \"1-7XFGkuXXEC9HcnVubukZKdo5tqrieVLIga9L6bPKxk\"\n",
+    "sheet = client.open_by_key(sheet_id).sheet1"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "021ec16d-9052-4399-86d3-aec593f7d65f",
    "metadata": {},
@@ -10,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 173,
    "id": "af31f7ec-7e5c-4750-9d37-5475f26cc9d6",
    "metadata": {},
    "outputs": [],
@@ -20,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 174,
    "id": "a9652ba8-4cb5-46f8-ba42-c362206de5dd",
    "metadata": {},
    "outputs": [],
@@ -47,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 175,
    "id": "0bfed970-5253-4a5e-bf5a-86ecef15e97f",
    "metadata": {},
    "outputs": [
@@ -56,56 +93,56 @@
      "output_type": "stream",
      "text": [
       "Top 50 Cryptocurrencies:\n",
-      "1. Bitcoin (BTC) - $92554 1842464186193 61624688461 -1.4207\n",
-      "2. Ethereum (ETH) - $3242.31 392321181635 28874942687 -0.26736\n",
-      "3. Tether (USDT) - $0.999876 137583768271 87594299741 -0.04711\n",
-      "4. XRP (XRP) - $2.3 132572294612 7220979063 1.49854\n",
-      "5. BNB (BNB) - $686.1 100446366337 1111024322 -0.24098\n",
-      "6. Solana (SOL) - $187.38 90760262424 4543727118 -2.55681\n",
-      "7. Dogecoin (DOGE) - $0.320746 47483155150 4125696956 -3.96223\n",
-      "8. USDC (USDC) - $1.0 45362539038 9855510746 -0.11609\n",
-      "9. Cardano (ADA) - $0.911398 32874831163 1693746187 -3.19907\n",
-      "10. Lido Staked Ether (STETH) - $3241.11 31203024530 62540308 -0.28697\n",
-      "11. TRON (TRX) - $0.241554 20873997211 1255613984 -2.20706\n",
-      "12. Avalanche (AVAX) - $36.44 14984034042 441812824 -1.94722\n",
-      "13. Sui (SUI) - $4.74 14330828358 2093132260 3.90427\n",
-      "14. Wrapped stETH (WSTETH) - $3894.49 13740238051 58525584 0.20122\n",
-      "15. Toncoin (TON) - $5.17 13129172734 255792707 -1.27181\n",
-      "16. Shiba Inu (SHIB) - $2.139e-05 12587251639 569884191 1.92526\n",
-      "17. Chainlink (LINK) - $19.69 12473957902 1122142846 -2.09601\n",
-      "18. Wrapped Bitcoin (WBTC) - $92597 12280898577 575933557 -1.31426\n",
-      "19. Stellar (XLM) - $0.400378 12221973815 698372397 -0.98707\n",
-      "20. Hedera (HBAR) - $0.271436 10443289000 632816532 -1.60058\n",
-      "21. Polkadot (DOT) - $6.65 10138583183 376704039 0.34975\n",
-      "22. WETH (WETH) - $3256.49 9821677675 1207573265 -0.02918\n",
-      "23. Bitcoin Cash (BCH) - $421.68 8383289461 280633990 -1.52283\n",
-      "24. LEO Token (LEO) - $9.03 8341594755 744336 -0.52926\n",
-      "25. Litecoin (LTC) - $102.81 7790323444 705085821 3.11411\n",
-      "26. Bitget Token (BGB) - $6.33 7630339821 358087584 -0.36042\n",
-      "27. Uniswap (UNI) - $12.63 7581115580 349239094 -1.37095\n",
-      "28. Pepe (PEPE) - $1.729e-05 7334636840 1670288656 -1.46378\n",
-      "29. Hyperliquid (HYPE) - $20.09 6711163309 331101586 -6.35223\n",
-      "30. Wrapped eETH (WEETH) - $3442.79 6451965141 17626786 0.12536\n",
-      "31. NEAR Protocol (NEAR) - $4.98 5829200496 374392225 -0.71128\n",
-      "32. Ethena USDe (USDE) - $0.993927 5755947631 152617379 -0.69788\n",
-      "33. USDS (USDS) - $0.994237 5708543949 26996998 -0.46025\n",
-      "34. Internet Computer (ICP) - $10.22 4899747676 215583488 -3.96593\n",
-      "35. Aptos (APT) - $8.69 4881688665 403506068 -1.50039\n",
-      "36. Aave (AAVE) - $283.5 4270385264 644160384 0.69309\n",
-      "37. Mantle (MNT) - $1.14 3856753429 169015631 -3.88928\n",
-      "38. POL (ex-MATIC) (POL) - $0.452596 3807103032 117416846 0.39294\n",
-      "39. MANTRA (OM) - $3.95 3789376714 101808374 1.66035\n",
-      "40. Cronos (CRO) - $0.138461 3772537950 30538487 -2.83485\n",
-      "41. Ethereum Classic (ETC) - $24.99 3753095730 253606337 0.65235\n",
-      "42. Render (RENDER) - $7.11 3690867322 228243883 -3.36576\n",
-      "43. Bittensor (TAO) - $447.56 3658177012 116702581 -1.72902\n",
-      "44. VeChain (VET) - $0.04457906 3613997701 86287675 1.2898\n",
-      "45. Monero (XMR) - $193.54 3568853909 60491352 -0.53368\n",
-      "46. Tokenize Xchange (TKX) - $42.79 3429539491 28489149 0.72278\n",
-      "47. Dai (DAI) - $1.0 3407061310 137195498 -0.10738\n",
-      "48. Artificial Superintelligence Alliance (FET) - $1.29 3379626770 451463506 -0.83181\n",
-      "49. Virtuals Protocol (VIRTUAL) - $3.19 3190214942 547446880 -7.82217\n",
-      "50. Arbitrum (ARB) - $0.753677 3174013381 433054189 -2.60503\n"
+      "1. Bitcoin (BTC) - $93823 1858837258854 51174679602 -0.60705\n",
+      "2. Ethereum (ETH) - $3254.19 392030975556 29061935144 -2.53401\n",
+      "3. Tether (USDT) - $0.999901 137431825236 100554464845 0.03835\n",
+      "4. XRP (XRP) - $2.29 131622983145 5082814875 -2.8578\n",
+      "5. BNB (BNB) - $690.01 100665547360 1049009113 -1.35732\n",
+      "6. Solana (SOL) - $189.12 91459464158 4576887586 -3.09192\n",
+      "7. Dogecoin (DOGE) - $0.327608 48340152899 3612640670 -3.59201\n",
+      "8. USDC (USDC) - $0.999987 45412954612 6194739018 -0.00073\n",
+      "9. Cardano (ADA) - $0.918796 32946272493 1241103784 -2.205\n",
+      "10. Lido Staked Ether (STETH) - $3252.18 31303473596 66796009 -2.36157\n",
+      "11. TRON (TRX) - $0.240971 20772061339 1154422839 -2.67359\n",
+      "12. Avalanche (AVAX) - $36.86 15130091326 408922647 -0.78216\n",
+      "13. Sui (SUI) - $4.86 14622623920 1918595484 1.34102\n",
+      "14. Wrapped stETH (WSTETH) - $3870.47 13654319627 58635119 -2.28366\n",
+      "15. Toncoin (TON) - $5.21 13241808919 233191006 -1.61667\n",
+      "16. Chainlink (LINK) - $19.95 12590016558 858062008 -1.76941\n",
+      "17. Shiba Inu (SHIB) - $2.134e-05 12574341175 511320816 0.27375\n",
+      "18. Wrapped Bitcoin (WBTC) - $93674 12344586264 461601657 -0.72015\n",
+      "19. Stellar (XLM) - $0.395398 12009253690 477435911 -4.84355\n",
+      "20. Hedera (HBAR) - $0.272436 10425071477 507267691 -1.68786\n",
+      "21. Polkadot (DOT) - $6.62 10066482897 319399193 -1.93522\n",
+      "22. WETH (WETH) - $3252.78 9817844544 656100450 -2.44398\n",
+      "23. Bitcoin Cash (BCH) - $427.5 8472920198 228248669 -1.229\n",
+      "24. LEO Token (LEO) - $9.1 8400309773 663662 0.02558\n",
+      "25. Uniswap (UNI) - $13.32 8001920850 444374848 1.80526\n",
+      "26. Bitget Token (BGB) - $6.6 7878147956 357065496 4.48855\n",
+      "27. Litecoin (LTC) - $103.95 7838188045 663553286 1.69466\n",
+      "28. Pepe (PEPE) - $1.729e-05 7274906969 1534337776 -3.46941\n",
+      "29. Hyperliquid (HYPE) - $21.11 7045287661 343769664 -2.69628\n",
+      "30. Wrapped eETH (WEETH) - $3438.04 6459259351 17491738 -2.41141\n",
+      "31. NEAR Protocol (NEAR) - $5.04 5888389501 321591020 -1.25449\n",
+      "32. Ethena USDe (USDE) - $0.998758 5791281796 122023246 -0.06583\n",
+      "33. USDS (USDS) - $1.0 5780755367 19535843 -0.09778\n",
+      "34. Internet Computer (ICP) - $10.39 4977436935 206528428 -3.39466\n",
+      "35. Aptos (APT) - $8.71 4872320463 376102939 -2.38679\n",
+      "36. Aave (AAVE) - $285.88 4306059483 599308949 -1.98122\n",
+      "37. Mantle (MNT) - $1.17 3919993840 169305612 -2.64501\n",
+      "38. POL (ex-MATIC) (POL) - $0.451595 3799132609 98844162 -2.36276\n",
+      "39. Cronos (CRO) - $0.139353 3791504186 30290064 -3.22448\n",
+      "40. Ethereum Classic (ETC) - $25.15 3779880791 153233502 -0.68748\n",
+      "41. Render (RENDER) - $7.3 3770808454 203600789 -2.07822\n",
+      "42. MANTRA (OM) - $3.92 3758007356 98553673 1.20618\n",
+      "43. VeChain (VET) - $0.04450929 3604687232 64628259 -1.96118\n",
+      "44. Monero (XMR) - $192.7 3554904642 54401183 -1.9917\n",
+      "45. Bittensor (TAO) - $432.42 3521714057 137575209 -6.50653\n",
+      "46. Artificial Superintelligence Alliance (FET) - $1.32 3442406641 431494267 -0.36558\n",
+      "47. Dai (DAI) - $1.0 3431601446 146039983 -0.00469\n",
+      "48. Tokenize Xchange (TKX) - $42.39 3391653788 26087025 -1.84583\n",
+      "49. Virtuals Protocol (VIRTUAL) - $3.18 3178326789 502277483 -5.32449\n",
+      "50. Filecoin (FIL) - $5.07 3142160195 289285113 -1.07234\n"
      ]
     }
    ],
@@ -127,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 176,
    "id": "a82522f3-7f23-42ea-9c99-0f3f3b21399f",
    "metadata": {},
    "outputs": [],
@@ -159,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 177,
    "id": "bc5b650c-c5a1-44fc-bf2c-43b0bef23e51",
    "metadata": {},
    "outputs": [
@@ -171,16 +208,16 @@
       "--- Data Analysis ---\n",
       "\n",
       "Top 5 Cryptocurrencies by Market Cap:\n",
-      "1. Bitcoin (BTC) - Market Cap: $1,842,464,186,193\n",
-      "2. Ethereum (ETH) - Market Cap: $392,321,181,635\n",
-      "3. Tether (USDT) - Market Cap: $137,583,768,271\n",
-      "4. XRP (XRP) - Market Cap: $132,572,294,612\n",
-      "5. BNB (BNB) - Market Cap: $100,446,366,337\n",
+      "1. Bitcoin (BTC) - Market Cap: $1,858,837,258,854\n",
+      "2. Ethereum (ETH) - Market Cap: $392,030,975,556\n",
+      "3. Tether (USDT) - Market Cap: $137,431,825,236\n",
+      "4. XRP (XRP) - Market Cap: $131,622,983,145\n",
+      "5. BNB (BNB) - Market Cap: $100,665,547,360\n",
       "\n",
-      "Average Price of Top 50 Cryptocurrencies: $4095.81\n",
+      "Average Price of Top 50 Cryptocurrencies: $4142.67\n",
       "\n",
-      "Highest 24h % Change: Sui (3.90%)\n",
-      "Lowest 24h % Change: Virtuals Protocol (-7.82%)\n"
+      "Highest 24h % Change: Bitget Token (4.49%)\n",
+      "Lowest 24h % Change: Bittensor (-6.51%)\n"
      ]
     }
    ],
@@ -198,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 178,
    "id": "5671b8d1-38ce-45d5-a623-d3838e5a9de9",
    "metadata": {},
    "outputs": [],
@@ -212,7 +249,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 179,
+   "id": "66c2693b-0a9d-4c73-ab44-4a4de4d2aaeb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def update_google_sheet(data):\n",
+    "   \n",
+    "    headers = ['Cryptocurrency Name', 'Symbol', 'Current Price (USD)', 'Market Capitalization',\n",
+    "               '24-hour Trading Volume', 'Price Change (24h, %)']\n",
+    "    \n",
+    "    existing_data = sheet.get_all_values()\n",
+    "\n",
+    "    if len(existing_data) == 0:\n",
+    "        sheet.append_row(headers)\n",
+    "        existing_data = [headers]\n",
+    "\n",
+    "    for coin in data:\n",
+    "        updated = False\n",
+    "        for i, row in enumerate(existing_data[1:], start=1):\n",
+    "            if row[1].upper() == coin['symbol'].upper():\n",
+    "                \n",
+    "                existing_data[i] = [\n",
+    "                    coin['name'],\n",
+    "                    coin['symbol'].upper(),\n",
+    "                    coin['current_price'],\n",
+    "                    coin['market_cap'],\n",
+    "                    coin['total_volume'],\n",
+    "                    coin['price_change_percentage_24h']\n",
+    "                ]\n",
+    "                updated = True\n",
+    "                break\n",
+    "\n",
+    "        if not updated:\n",
+    "            existing_data.append([\n",
+    "                coin['name'],\n",
+    "                coin['symbol'].upper(),\n",
+    "                coin['current_price'],\n",
+    "                coin['market_cap'],\n",
+    "                coin['total_volume'],\n",
+    "                coin['price_change_percentage_24h']\n",
+    "            ])\n",
+    "\n",
+    "    sheet.clear()\n",
+    "    sheet.append_rows(existing_data, value_input_option=\"USER_ENTERED\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
    "id": "b46203f8-6cbc-4d92-a576-6b9c43a1b2f8",
    "metadata": {},
    "outputs": [],
@@ -280,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 181,
    "id": "5559d7a7-d78a-4221-a95f-c1e59888572b",
    "metadata": {},
    "outputs": [],
@@ -317,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 182,
    "id": "5875f383-be8d-4c63-be15-34bcfac95628",
    "metadata": {},
    "outputs": [],
@@ -326,44 +411,29 @@
     "    while True:\n",
     "        crypto_data = fetch_crypto_data()\n",
     "        if crypto_data:\n",
-    "            update_excel_sheet(crypto_data)\n",
+    "            #update_excel_sheet(crypto_data)\n",
+    "            update_google_sheet(crypto_data)\n",
     "            #generate_analysis_report(crypto_data)\n",
-    "            print(\"Updated\")\n",
-    "        time.sleep(60)  # Wait for 5 minutes (300 seconds)"
+    "            \n",
+    "        time.sleep(300)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 183,
    "id": "6a6d586c-925c-44f0-aad7-1b475e8fede7",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Updated\n",
-      "Updated\n",
-      "Updated\n",
-      "Updated\n",
-      "Updated\n",
-      "Updated\n",
-      "Updated\n",
-      "Updated\n",
-      "Updated\n",
-      "Updated\n",
-      "Updated\n",
-      "Updated\n",
-      "Updated\n",
-      "Updated\n",
-      "Updated\n",
-      "Updated\n",
-      "Updated\n",
-      "Updated\n",
-      "Updated\n",
-      "Updated\n",
-      "Updated\n",
-      "Updated\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[183], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mrun_live_updates\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[182], line 9\u001b[0m, in \u001b[0;36mrun_live_updates\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m     update_google_sheet(crypto_data)\n\u001b[1;32m      7\u001b[0m     \u001b[38;5;66;03m#generate_analysis_report(crypto_data)\u001b[39;00m\n\u001b[0;32m----> 9\u001b[0m \u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m300\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
